{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 9,
  "lineage": "d1847cb5-c40d-710c-7eb3-a0f9f9f01ec6",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:770922366577:instance/i-09f6f4c99716314dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f6f4c99716314dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-069bead7aed0c1d56",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-3-89-87-70.compute-1.amazonaws.com",
            "public_ip": "3.89.87.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020bdea50c7dd7151",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04387630cb72282a9",
            "tags": {
              "Name": "webserver_tf"
            },
            "tags_all": {
              "Name": "webserver_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d1048a237fc09bc"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.tf_public_sg",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770922366577:internet-gateway/igw-082bfc2e6424d92d1",
            "id": "igw-082bfc2e6424d92d1",
            "owner_id": "770922366577",
            "tags": {
              "Name": "Terraform-Gateway"
            },
            "tags_all": {
              "Name": "Terraform-Gateway"
            },
            "vpc_id": "vpc-09c25330474420279"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770922366577:route-table/rtb-04d089a8fa1d2b56c",
            "id": "rtb-04d089a8fa1d2b56c",
            "owner_id": "770922366577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082bfc2e6424d92d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-Public-RouteTable"
            },
            "tags_all": {
              "Name": "Terraform-Public-RouteTable"
            },
            "vpc_id": "vpc-09c25330474420279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc393de672b1506d",
            "route_table_id": "rtb-04d089a8fa1d2b56c",
            "subnet_id": "subnet-04387630cb72282a9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_public_route",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770922366577:security-group/sg-01d1048a237fc09bc",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d1048a237fc09bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": "",
            "owner_id": "770922366577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-SecurityGroup"
            },
            "tags_all": {
              "Name": "Terraform-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c25330474420279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770922366577:subnet/subnet-04387630cb72282a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04387630cb72282a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770922366577",
            "tags": {
              "Name": "Terraform-Subnet"
            },
            "tags_all": {
              "Name": "Terraform-Subnet"
            },
            "vpc_id": "vpc-09c25330474420279"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770922366577:vpc/vpc-09c25330474420279",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098e37335cd0ac624",
            "default_route_table_id": "rtb-0794fc96c46c8f710",
            "default_security_group_id": "sg-05cf6203f76da7590",
            "dhcp_options_id": "dopt-00bf3fca7abfc8be0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09c25330474420279",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0794fc96c46c8f710",
            "owner_id": "770922366577",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}